fix scrolling on mobile

--- a/animation.css
+++ b/animation.css
@@ -20,5 +20,6 @@
     100%{
         opacity: 0;
         display: none;
+        visibility: hidden;
     }
 }
